# trader-deprecated-4

./: .env.example  .env.sandbox  .gitignore  Cargo.toml  update.sh
src/: error.rs  main.rs
src/exchanges/: binance.rs  historical.rs  mod.rs
src/exchanges/binance/: mod.rs  positions.rs  wallet.rs
src/indicators/: bb.rs  cum.rs  differential.rs  ema.rs  lsq.rs  macd.rs  mod.rs  stdev.rs  val.rs
src/loggers/: database.rs  mod.rs  telegram.rs
src/strategies/: custom.rs  duplicated.rs  hold.rs  interval.rs  mod.rs  multi.rs  random.rs  simulated.rs
