[package]
name = "trader"
version = "0.1.0"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
openlimits = { git = "https://github.com/fabianboesiger/openlimits" }
rust_decimal = "1.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "decimal", "tls" ] }
dotenv = "0.15"
async-trait = "0.1"
serde = "1.0"
bincode = "1.3"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"